# Max_Height_Article_Algorithms

./: .gitignore  README.md
Blending_Comparaisons/: comp_hn18.png.import  comp_linear.png.import  comp_m22.png.import  comp_ours.png.import  icon.svg.import  project.godot  root.tscn  screenshot.gd
Blending_Comparaisons/textures/: Bricks075A_2K-JPG_Color.jpg.import  Gravel038_2K-JPG_Displacement.jpg.import  PavingStones122_2K-JPG_Color.jpg.import  PavingStones131_2K-JPG_AmbientOcclusion.jpg.import  PavingStones131_2K-JPG_Color.jpg.import  PavingStones131_2K-JPG_Displacement.jpg.import  S1.jpg.import  S2.jpg.import  T1.png.import  T2.png.import  T3.png.import  T4.png.import  T6.png.import  T_gaussian.png.import  T_inv.png.import  Tiles130_2K-JPG_AmbientOcclusion.jpg.import  Tiles130_2K-JPG_Color.jpg.import  (+1 more)
CleanGPUFigures/: mixmax.gdshader  preprocessing.gd  project.godot  scene.tscn
Ergodicity/: CMakeLists.txt
Ergodicity/includes/: globals.h
Ergodicity/scripts/: plot.py
Ergodicity/src/: blend.h  ergodicity.h  hex.h  linear.h  main.cpp  maxpriority.h  processmetrics.h  utils.h  variance_preserving.h  variancepreserving.h
Figures (propre)/: figures.py  methods.py  utils.py
Filtering_Comparaisons/: Scene.tscn  icon.svg.import  precompute_s_maps.py  project.godot
Line_Generator/: Line.gd  icon.svg.import  node_2d.tscn  project.godot
MixMax_weights/: base_variance.png.import  comparaison_linear_mixmax.png.import  fig2-bis.tscn  fig2.png.import  fig2.tscn  fig5.tscn  fig_a_3.tscn  fig_lambda.tscn  fig_pres.tscn  fig_stat.tscn  fps.gd  icon.svg.import  lambda_brick_forest.jpg.import  lambda_brick_grass.jpg.import  lambda_brick_paving.jpg.import  lambda_brick_sand.jpg.import  lambda_brick_soil.jpg.import  lambda_forest_paving.jpg.import  lambda_forest_sand.jpg.import  lambda_forest_soil.jpg.import  lambda_grass_forest.jpg.import  lambda_grass_paving.jpg.import  lambda_grass_sand.jpg.import  lambda_grass_soil.jpg.import  lambda_rock_brick.jpg.import  lambda_rock_forest.jpg.import  lambda_rock_grass.jpg.import  lambda_rock_paving.jpg.import  lambda_rock_sand.jpg.import  lambda_rock_soil.jpg.import  lambda_sand_paving.jpg.import  lambda_sand_soil.jpg.import  lambda_soil_paving.jpg.import  lambdas.png.import  lambdas_0.png.import  lambdas_1.png.import  lambdas_2.png.import  lambdas_3.png.import  lin_mm_brick_forest.jpg.import  lin_mm_brick_grass.jpg.import  (+29 more)
PbrDemo/: icon.svg.import  mixmaxpbr.gdshader  precompute_bm_maps.py  precompute_constant_variance.py  project.godot  root.gd  root.tscn
Probability/: family.py  maxofngaussians.py
Segmentation/: family.py  rand.py
Stationarity_figures/: icon.svg.import  ours.gdshader  project.godot  root.tscn
Tiling_Blending_Comparaison/: project.godot
t_b_comparaisons/: project.godot
(+243 files in other folders)
